<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dunedinbuscard.gocard.AboutActivity"
    android:background="#ff242460">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/app_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="79dp"
        android:textColor="#ffffffff"
        android:textStyle="bold"
        android:textIsSelectable="false"
        android:textSize="32sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/version"
        android:id="@+id/version_text"
        android:textColor="#ffffffff"
        android:layout_below="@+id/app_name"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disclaimer"
        android:id="@+id/disclaimer"
        android:textColor="#ffffffff"
        android:textSize="12sp"
        android:textAlignment="center"
        android:layout_alignWithParentIfMissing="false"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/made_by"
        android:id="@+id/made_by"
        android:layout_below="@+id/version_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#ffffffff"
        android:textAlignment="center"
        android:singleLine="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerHorizontal="true"
        android:lines="8"
        android:layout_above="@+id/disclaimer"
        android:gravity="top|center_horizontal" />

</RelativeLayout>
