<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".BalanceActivity"
    android:id="@+id/layout"
    android:background="#ff242460">

    <TextView
        android:text="@string/scan_gocard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/balance"
        android:textIsSelectable="false"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_below="@+id/you_have"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/you_have"
        android:id="@+id/you_have"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="73dp"
        android:paddingBottom="10dp"
        android:visibility="invisible"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/balance"
        android:layout_alignEnd="@+id/balance"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/on_your_gocard"
        android:id="@+id/on_your_card"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:layout_below="@+id/balance"
        android:paddingTop="10dp"
        android:visibility="invisible"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/balance"
        android:layout_alignEnd="@+id/balance"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/card_id"
        android:id="@+id/card_id"
        android:layout_alignParentBottom="true"
        android:textColor="@android:color/white"
        android:visibility="invisible"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/topup_soon"
        android:id="@+id/balance_low"
        android:textColor="#ffffffff"
        android:layout_marginBottom="25dp"
        android:singleLine="false"
        android:visibility="invisible"
        android:gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/card_id" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/balance_low_sign"
        android:src="@drawable/caution"
        android:layout_above="@+id/balance_low"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/topup_soon"
        android:paddingBottom="5dp"
        android:visibility="invisible" />

</RelativeLayout>
